# swpu_rm_energe

./: README.md
MATLAB仿真代码/: JudgingGaussian.mlx  README.md  R_center.mat  atheta.mat  fftfit.mlx  fit.m  jacob.mlx  kalman.mlx  myidft.m  predicted.m  preprocess.m  pso.mlx  t.mat  test.mlx  theta.mat  untitled.mlx  untitled3.mlx  untitled4.mlx  vane.mat  xxx.mlx  yunsu_kalman.mlx  yunsu_predicted.m  yyy.mlx  zzz.mlx
detect_with_yolov8/: README.md  change_name.py  detect_with_onnx.py  detect_withl_pt.py  export.py  json_to_txt.py  resize.py  split_data.py  split_frame.py  test.py  train.py
video_energe/src/: README.md
video_energe/src/bringup/launch/: bringup.launch.py
video_energe/src/img_pro/: README.md  setup.cfg
video_energe/src/img_pro/img_pro/: img_pro_node.py
video_energe/src/interfaces/: package.xml
video_energe/src/interfaces/msg/: Armor.msg  ParaCalcu.msg
video_energe/src/para_cal/: CMakeLists.txt
video_energe/src/para_cal/include/para_cal/: pso_node.hpp
video_energe/src/para_cal/launch/: para_cal.launch.py
video_energe/src/video_test/: package.xml
video_energe_test/src/: README.md
video_energe_test/src/bringup/: CMakeLists.txt  package.xml
video_energe_test/src/img_pro/: package.xml  setup.py
video_energe_test/src/interfaces/: CMakeLists.txt
video_energe_test/src/para_cal/: README.md  package.xml
video_energe_test/src/pitch_yaw_solve/: CMakeLists.txt  README.md  package.xml
video_energe_test/src/video_test/: CMakeLists.txt
video_energe_test/src/video_test/include/video_test/: video_read_node.hpp
(+17 files in other folders)
